<resources>
    <string name="app_name">Trivia App</string>
    <string name="false_button_text">False</string>
    <string name="true_button_text">True</string>
    <string name="next_question_button_text">Next</string>
    <string name="number_question_text">%d / %d</string>
    <string name="correct_answer">Correct !</string>
    <string name="incorrect_answer">Incorrect !</string>
    <string name="app_title_tv_text">WELCOME TO THE TRIVIA APP</string>
    <string name="label_number_of_question_text">Number of questions:</string>
    <string name="label_question_theme_text">Category</string>
    <string name="label_level_text">Difficulty:</string>
    <string name="level_select_easy">Easy</string>
    <string name="level_select_medium">Medium</string>
    <string name="level_select_hard">Hard</string>
    <string name="btn_start_text">Start the quiz !</string>
    <string name="default_number_question_value">10</string>
    <string name="higher_score_text">Higher Score: %d</string>
    <string name="score_final_text_toast">Well Done! Your score is %d</string>
    <string name="menu_username_input_hint">Enter your username</string>
    <string name="menu_chip_10_questions">10 questions</string>
    <string name="menu_chip_20_questions">20 questions</string>
    <string name="menu_chip_30_questions">30 questions</string>
    <string name="menu_difficulty_easy">Easy</string>
    <string name="menu_difficulty_medium">Medium</string>
    <string name="menu_difficulty_hard">Hard</string>
    <string name="menu_new_game_btn_text">New Game</string>

    <string-array name="category_names">
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
</resources>